docs(vector-api): 全面核实和完善 Vector API 文档
主要修复:
- 修正 JEP 编号错误 (JDK 20: JEP 438, JDK 21: JEP 448)
- 修正时间计算: 10年 → 5年 (JDK 16-26)
- 移除错误的 --enable-preview 参数
- 更新 Valhalla (JEP 401) 状态为 Early Access
- 更新 Babylon 项目描述 (HAT 框架)
- 修正 Float16 相关 API 示例
- 统一 JDK 26 GA 发布日期为 2026-03-17
- 添加 JEP 401 和项目链接

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>